kubernetes/photoprism/overlays/k3s/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: photoprism
  namespace: photoprism
  labels:
    app.kubernetes.io/instance: photoprism
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`photoprism.k3s.<path:secret/data/homelab/domain#url>`)
      kind: Rule
      services:
        - name: photoprism
          port: 2342
